--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "react-tilt": "^0.1.4",
     "react-typical": "^0.1.3",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^10.14.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
