--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "saits_front_v2",
+  "homepage": "new/",
   "version": "0.1.0",
-  "homepage":"new/",
   "private": true,
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.3.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
